--- a/market/templates/register.html
+++ b/market/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="container content-section">
+    <div class="container account">
         <form id="account" action="{{ url_for('users.register') }}" method="POST">
             {{form.hidden_tag()}}
             <fieldset class="form-group">
